--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,148 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Roboto", sans-serif;
+  background-color: slategrey;
+}
+
+.numInput{
+  margin: 20px;
+  padding: 5px;
+  width: 250px;
+  height: 40px;
+  border-radius: 5px;
+  position: relative;
+  font-weight: bold;
+  font-size: larger;
+}
+
+.App .openModalBtn {
+  width: 200px;
+  height: 40px;
+  border: none;
+  border-radius: 6px;
+  background-color: cornflowerblue;
+  color: white;
+  cursor: pointer;
+}
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.modalBackground {
+  width: 100vw;
+  height: 100vh;
+  background-color:slategrey ;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* rgba(200, 200, 200) */
+.modalContainer {
+  width: 500px;
+  height: 500px;
+  border-radius: 12px;
+  background-color: beige;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+}
+
+.modalContainer .title {
+  display: inline-block;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.titleCloseBtn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.titleCloseBtn button {
+  background-color: transparent;
+  border: none;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.modalContainer .body {
+  /* flex: 50%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.modalContainer .footer {
+  margin-top: 30px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.modalContainer .footer button {
+  width: 150px;
+  height: 45px;
+  margin: 10px;
+  border: none;
+  background-color: cornflowerblue;
   color: white;
+  border-radius: 8px;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+#cancelBtn {
+  background-color: green;
+  width: 300px;
+  border-radius: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titlesetOpenModalBtn{
+  display: flex;
+  justify-content: end;
+}
+
+.optionBtn{
+  display: flex;
+  justify-content: space-between;
+}
+
+.optionBtn a{
+  text-decoration: none;
+  color: cornflowerblue;
+}
+
+.optionBtn a:hover{
+  color: blue;
+}
+
+.otpBox{
+  margin: 40px;
+}
+
+.otpBox input{
+  margin: 10px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 4px solid #81D6F2;
+  
+}
+
+.otpBox input:focus{
+  outline: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 4px solid #2874A6;
 }
